# sistemahotelaria

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
hotel/: admin.py  models.py  serializers.py  views.py
hotel/migrations/: 0001_initial.py
