[project]
name = "sistemahotelaria"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "juliacdss", email = "juliacostaifc@gmail.com"},
]
dependencies = [
    "django>=5.2.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
